Last change left a little bit of white space under the header so removed the extra 20px

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -7,7 +7,7 @@
 
 @media (max-width: 767px) {
   .app-main {
-    padding-top: calc(150px + env(safe-area-inset-top) + 20px);
+    padding-top: calc(150px + env(safe-area-inset-top));
     padding-bottom: 80px;
   }
 }
